# adventure

./: .gitignore  CMakeLists.txt  Makefile  README.md  adventure.cbp  adventure.r
CMake/Modules/: FindGAME_ENGINE.cmake
Debug/: adventure.exp
plugin/adventure/: adventure.r
plugin/adventure/shaders/: pixelShader.frag
source/: CMakeLists.txt  IDestroyable.h  SpriteAnimation.cpp  SpriteAnimation.h  adventure.cpp  adventure.h  space_ship.cpp  space_ship.h
source/ships/: AISpaceShip.cpp  AISpaceShip.h  SpaceShip.cpp  SpaceShip.h  UserControlledSpaceShip.cpp  UserControlledSpaceShip.h
source/ships/weapons/: spaceShipBeam.cpp  spaceShipBeam.h
textures/: Thumbs.db
